SUBDIRS = C de it ja pt ru

gnomehelpdir = $(datadir)/gnome/help/gnucash-guide

if WITH_MOBI
  MOBI = mobi
endif

epub $(MOBI):
	@fail= failcom='exit 1'; \
	for f in x $$MAKEFLAGS; do \
	  case $$f in \
	    *=* | --[!k]*);; \
	    *k*) failcom='fail=yes';; \
	  esac; \
	done; \
	dot_seen=no; \
	target=`echo $@ | sed s/-recursive//`; \
	list='$(SUBDIRS)'; for subdir in $$list; do \
	  echo "Making $$target in $$subdir"; \
	  if test "$$subdir" = "."; then \
	    dot_seen=yes; \
	    local_target="$$target-am"; \
	  else \
	    local_target="$$target"; \
	  fi; \
	  ($(am__cd) $$subdir && $(MAKE) $(AM_MAKEFLAGS) $$local_target) \
	  || eval $$failcom; \
	done; test -z "$$fail"

uninstall-hook:
	rmdir --ignore-fail-on-non-empty "$(DESTDIR)$(gnomehelpdir)"
