figdir = figures
docname = gnucash-help
lang = C
omffile = gnucash-help-C.omf
entities = \
	Help_ch_Intro.xml \
	Help_ch_GettingStarted.xml \
	Help_ch_GUIMenus.xml \
	Help_ch_Account-Actions.xml \
	Help_ch_Transactions.xml \
	Help_ch_Tools_Druids.xml \
	Help_ch_Reports.xml \
	Help_ch_Customize.xml \
	Help_chtacctseg.xml \
	Help_chartofaccts.xml \
	Help_legal.xml \
	Help_txf-categories.xml \
	Help_fdl-appendix.xml \
        Help_tips-appendix.xml
include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook
DISTCLEANFILES =  gnucash-help-C.omf.out
