figdir = figures
docname = gnucash-guide
lang = it_IT
omffile = gnucash-guide-it_IT.omf
entities = \
	fdl-appendix.xml \
	legal.xml \
	ch_oview.xml \
	ch_basics.xml \
	ch_accts.xml \
	ch_txns.xml \
	ch_cbook.xml \
	ch_cc.xml \
	ch_loans.xml \
	ch_invest.xml \
	ch_capgain.xml \
	ch_currency.xml \
	ch_dep.xml \
	ch_bus_ar.xml \
	ch_bus_ap.xml \
	ch_bus_pay.xml \
	ch_budgets.xml \
	appendixa.xml \
	appendixb.xml \
	appendixc.xml \
	appendixd.xml
include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook
DISTCLEANFILES =  gnucash-guide-it_IT.omf.out
